<resources>
    <string name="app_name">Flights Sniffer</string>

    <string name="arrivals">arrivals</string>
    <string name="departures">departures</string>
    <string name="distance_left">%dkm left</string>
    <string name="speed">%dkm\\h</string>
    <string name="altitude">%dm</string>
    <string name="flight_info">%s to %s</string>
    <string name="settings">Settings</string>
    <string name="bounds_select">Bounds Select</string>
    <string name="details">%s details</string>
    <string name="bounds_not_set">Bounds were not set!</string>

    <string name="preference_track_type">Track type</string>
    <string name="preference_track_departures">Track departures</string>
    <string name="preference_track_arrivals">Track arrivals</string>
    <string name="preference_track_arrivals_summary">Arrivals will be tracked</string>
    <string name="preference_track_departures_summary">Departures wiil be tracked</string>
    <string name="preference_at_leas_one_toast">There should be at least one type checked</string>
    <string name="preference_airport_iata">Airport IATA code</string>
    <string name="preference_airport_iata_summary">Three character IATA code, like WAW</string>
    <string name="preference_notifications">Big aircraft notifcations</string>
    <string name="preference_notifications_summary">Display arrivals and departures notifications</string>
    <string name="preference_airport_iata_invalid">Provided code is invalid</string>
    <string name="preference_zone_boundaries">Tracking zone boundaries</string>
    <string name="preference_zone_boundaries_default">57.00, 47.00, 12.00, 26.00</string>
    <string name="preference_zone_boundaries_summary">Boundaries should be defined as a two pairs of latitude and longitude, like: latitude 1: 57.00, latitude 2: 47.00, longitude 1: 12.00, longitude 2: 26.00</string>
</resources>