<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preference_track_type">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="trackDepartures"
            app:summary="@string/preference_track_departures_summary"
            app:title="@string/preference_track_departures" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="trackArrivals"
            app:summary="@string/preference_track_arrivals_summary"
            app:title="@string/preference_track_arrivals" />
    </PreferenceCategory>

    <EditTextPreference
        android:key="airportIata"
        android:title="@string/preference_airport_iata"
        app:summary="@string/preference_airport_iata_summary"
        />

    <Preference
        android:key="zoneBoundaries"
        android:title="@string/preference_zone_boundaries"
        app:defaultValue="@string/preference_zone_boundaries_default"
        app:summary="@string/preference_zone_boundaries_summary"
        />

    <CheckBoxPreference
        android:key="bigAircraftNotifications"
        android:defaultValue="true"
        android:title="@string/preference_notifications"
        app:summary="@string/preference_notifications_summary"
        />

</PreferenceScreen>